// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="wmstool-table-wrapper"
>
  <div
    class="wmstool-spin-nested-loading"
  >
    <div
      class="wmstool-spin-container"
    >
      <div
        class="wmstool-table wmstool-table-large wmstool-table-empty wmstool-table-scroll-position-left"
      >
        <div
          class="wmstool-table-content"
        >
          <div
            class="wmstool-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="wmstool-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="wmstool-table-tbody"
              />
            </table>
          </div>
          <div
            class="wmstool-table-placeholder"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="wmstool-table-wrapper"
>
  <div
    class="wmstool-spin-nested-loading"
  >
    <div
      class="wmstool-spin-container"
    >
      <div
        class="wmstool-table wmstool-table-large wmstool-table-empty wmstool-table-scroll-position-left"
      >
        <div
          class="wmstool-table-content"
        >
          <div
            class="wmstool-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="wmstool-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="wmstool-table-tbody"
              />
            </table>
          </div>
          <div
            class="wmstool-table-placeholder"
          >
            custom empty text 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="wmstool-table-wrapper"
>
  <div
    class="wmstool-spin-nested-loading"
  >
    <div
      class="wmstool-spin-container"
    >
      <div
        class="wmstool-table wmstool-table-large wmstool-table-empty wmstool-table-scroll-position-left"
      >
        <div
          class="wmstool-table-content"
        >
          <div
            class="wmstool-table-scroll"
          >
            <div
              class="wmstool-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width:100px;min-width:100px"
                  />
                </colgroup>
                <thead
                  class="wmstool-table-thead"
                >
                  <tr>
                    <th
                      class=""
                    >
                      <span>
                        Full Name
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Age
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Action
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="wmstool-table-tbody"
                />
              </table>
            </div>
            <div
              class="wmstool-table-placeholder"
            >
              No data
            </div>
          </div>
          <div
            class="wmstool-table-fixed-left"
          >
            <div
              class="wmstool-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="wmstool-table-body-inner"
              >
                <table
                  class="wmstool-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="wmstool-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <span>
                          Full Name
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Age
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="wmstool-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
          <div
            class="wmstool-table-fixed-right"
          >
            <div
              class="wmstool-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="wmstool-table-body-inner"
              >
                <table
                  class="wmstool-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="wmstool-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <span>
                          Action
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="wmstool-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
